namespace Backend.Models;

public class FuncionarioLoginDto
{
    public string NumeroMecanografico { get; set; }
    public string Password { get; set; }
}