@startuml 01-subsistema-autenticacao
' =========================================================================
'  Subsistema :: Autenticação  (interface iAuth)
'  Fonte: Backend/{Controllers,Services,Models}/Auth
'  Responsabilidade: login de clientes e funcionários + registo de cliente,
'  emissão de JWT (claim "id" = NIF ou NumeroMecanografico; "role" = Cliente/Cargo).
' =========================================================================
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam shadowing false
hide empty members
title Subsistema de Autenticação  —  <<provides>> iAuth

' =========================================================================
'  Camada :: Models  (DTOs de transporte HTTP)
' =========================================================================
package "Backend.Models (Auth)" <<Folder>> {

    class ClienteLoginDto <<DTO>> {
        + NIF : string  <<[Required]>>
        + Password : string  <<[Required]>>
    }

    class ClienteRegistoDto <<DTO>> {
        + Nome : string  <<[Required]>>
        + Email : string  <<[Required, EmailAddress]>>
        + Morada : string  <<[Required]>>
        + NIF : string  <<[Required, RegEx(\d{9})]>>
        + Telefone : string  <<[Required, RegEx(\d{9})]>>
        + Password : string  <<[Required]>>
    }

    class FuncionarioLoginDto <<DTO>> {
        + NumeroMecanografico : string
        + Password : string
    }
}

' =========================================================================
'  Camada :: Services  (lógica de autenticação)
' =========================================================================
package "Backend.Services (Auth)" <<Folder>> {

    interface IAuthService <<interface>> {
        + LoginFuncionarioAsync(dto : FuncionarioLoginDto) : Task<string?>
        + LoginClienteAsync(dto : ClienteLoginDto) : Task<string?>
        + RegistarClienteAsync(dto : ClienteRegistoDto) : Task<bool>
    }

    class AuthService {
        - _httpClient : HttpClient
        - _configuration : IConfiguration
        --
        + AuthService(httpClient : HttpClient, configuration : IConfiguration)
        + LoginFuncionarioAsync(dto : FuncionarioLoginDto) : Task<string?>
        + LoginClienteAsync(dto : ClienteLoginDto) : Task<string?>
        + RegistarClienteAsync(dto : ClienteRegistoDto) : Task<bool>
        - GerarJwtToken(id : string, role : string) : string
        - HashPassword(password : string) : string
    }

    AuthService .up.|> IAuthService
}

' =========================================================================
'  Camada :: Controllers  (endpoints REST)
' =========================================================================
package "Backend.Controllers (Auth)" <<Folder>> {

    class AuthController <<RestController>> {
        - _authService : IAuthService
        --
        + AuthController(authService : IAuthService)
        + LoginFuncionario(dto : FuncionarioLoginDto) : Task<IActionResult>  <<POST /api/auth/login/funcionario>>
        + Registar(dto : ClienteRegistoDto) : Task<IActionResult>  <<POST /api/auth/register/cliente>>
        + Login(dto : ClienteLoginDto) : Task<IActionResult>  <<POST /api/auth/login/cliente>>
    }
}

' =========================================================================
'  Interface provida no diagrama de componentes  (lollipop «iAuth»)
' =========================================================================
interface "iAuth" as iAuth <<provided>>
AuthController -up- iAuth : <<realize>>

' =========================================================================
'  Relações  (dependências via injeção de construtor e uso de DTOs)
' =========================================================================
AuthController   ..>  IAuthService            : <<use>>  «DI»
AuthService      ..>  ClienteLoginDto         : <<use>>
AuthService      ..>  ClienteRegistoDto       : <<use>>
AuthService      ..>  FuncionarioLoginDto     : <<use>>
AuthController   ..>  ClienteLoginDto         : <<bind>>  @FromBody
AuthController   ..>  ClienteRegistoDto       : <<bind>>  @FromBody
AuthController   ..>  FuncionarioLoginDto     : <<bind>>  @FromBody

note right of AuthService
  **Autenticação**
  • Password verificada via BCrypt.Verify
  • Token JWT (HMAC-SHA256) com claim
    "id" = NIF/NumeroMecanografico e
    "role" = "Cliente" ou Cargo.
  • Valida unicidade de NIF no registo.
end note

@enduml
